--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
 body {
     background-color: aquamarine;
 }
+
+h1 {
+    text-align: center;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+.baseC {
+    margin-right: 20px;
+    font-size: 35px;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px; 
+    height: 550px;
+    background-color: #FFFF33;
+    border-radius: 5px;
+
+}
+
+img {
+    height: 500px;
+}
