--- a/style.css
+++ b/style.css
@@ -6,14 +6,22 @@ h1 {
     text-align: center;
 }
 
-form {
+.style {
+    display: flex;
+}
+
+.spacing {
+    display: flex;
+}
+
+.spacing, .blur, .color {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 20px;
 }
 
-.baseC {
+.text {
     margin-right: 20px;
     font-size: 35px;
 }
