--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ h1 {
 
 .style {
     display: flex;
+    justify-content: center;
 }
 
 .spacing {
     display: flex;
 }
 
-.spacing, .blur, .color {
+#spacing, #blur, #color {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,7 +27,7 @@ h1 {
     font-size: 35px;
 }
 
-.image {
+#image {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,7 +35,7 @@ h1 {
     margin-right: auto;
     width: 550px; 
     height: 550px;
-    background-color: #FFFF33;
+    background-color: #EEEE68;
     border-radius: 5px;
 
 }
