--- a/style.css
+++ b/style.css
@@ -33,13 +33,10 @@ h1 {
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    width: 550px; 
-    height: 550px;
-    background-color: #EEEE68;
-    border-radius: 5px;
-
+    filter: blur(3px);
 }
 
 img {
     height: 500px;
+    border: 15px solid #ad3286;
 }
